made changes to spring security config and the authentication system